# gene-zip

./: .gitignore  Cargo.toml  README  README.md  build.rs  g-zip installer.iss  gene-zip installer.iss  infoafter.txt  infobefore.txt
benches/: encoding.rs
benches/test_files/: small_file.fasta  small_file.txt
installer/: after_info.txt  g-zip installer.iss  pre_info.txt
src/: lib.rs  main.rs
src/convert_utils/: decoder.rs  encoder.rs  mod.rs
src/convert_utils/error_correcting/: hamming_code.rs  mod.rs  rustyham.rs
src/gui_builder/: AppState.rs  decode_encode.rs  error_correcting.rs  error_window.rs  file_path.rs  loading_window.rs  mod.rs  start_button.rs
src/gui_builder/fasta_header_config/: config_sub_builder.rs  fasta_customizer.rs  fasta_header_config_builder.rs  mod.rs
src/utils/: mod.rs  read_file.rs
