[package]
name = "gene-zip"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.8.3"
druid-widget-nursery = "0.1.0"
im = "15.1.0"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "encoding"
harness = false
